--- a/modal.html
+++ b/modal.html
@@ -8,6 +8,43 @@
 </head>
 <body>
     <div class="row">
+       <!-- Start NFT details -->
+       <div class="modal fade" id="nft-details-modal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog nft-details-modal">
+          <div class="modal-content">
+            <span data-bs-dismiss="modal" class="modal-close-btn"><i class="fa-solid fa-xmark"></i></span>
+            <div class="modal-body p-0">
+              <h3>Checkout Your <span class="playfair-display gradient-text"> NFT Details</span> </h3>
+
+                <div class="nft-modal-body-area d-flex align-items-center justify-content-between flex-wrap">
+                  <div class="nft-modal-left-info">
+                    <ul>
+                      <li class="d-flex align-items-center">NFT Name <i></i> <span class="playfair-display gradient-text">helido-Gtr 09674</span></li>
+                      <li class="d-flex align-items-center">Current Value <i></i> <span class="playfair-display" style="font-size: 22px;">0.25464 USD</span></li>
+                      <li class="d-flex align-items-center">launch Date <i></i> <span style="font-size: 22px;font-weight: 700;">25 Dec, 2024</span></li>
+                      <li class="d-flex align-items-center m-0">Daily  Increment <i></i> <span style="font-size: 24px;font-weight: 900;color:#16E042;" class="playfair-display">0.214%</span></li>
+                    </ul>
+                  </div>
+                  <div class="nft-modal-right-thum">
+                    <img src="assets/images/ntf-details.png" alt="img">
+                  </div>
+                </div>
+                 
+                <div class="d-flex justify-content-between liquidity-info">
+                  <div class="liquidity-footer-info d-flex align-items-start">
+                    <img src="assets/images/info.png" alt="icon">
+                    <p> Innovative liquidity solutions and strategic investments for a stable and efficient market.</p>
+                  </div>
+                  <div class="liquidity-footer-btn">
+                    <a class="primary-btn" href="#" data-bs-toggle="modal" data-bs-target="#congratulations-modal">Go Back </a>
+                  </div>
+                </div>
+             
+            </div>
+          </div>
+        </div>
+      </div>
+       <!-- End NFT details -->
         <!--Start Liquidity option modal -->
         <div class="modal fade" id="user-liquidity-pool" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
           <div class="modal-dialog liquidity-modal">
@@ -78,6 +115,18 @@
                  <p><span class="playfair-display gradient-text">Oww! </span> You have already selected the Liquidity option, And It’s</p>
                  <div class="button-wrapper d-flex justify-content-end">
                    <a href="#" class="primary-btn commodity-active">Commodity</a>
+                 </div>
+               </div>
+          </div>
+        </div>
+        <div class="col-md-12">
+          <div class="liquidity-common-box d-flex justify-content-between">
+               <h3>Check Out your  <span class="playfair-display gradient-text"> NFT Details!</span></h3>
+               <div class="liquidity-right-area">
+                 <p>Innovative liquidity solutions and strategic investments for a stable and efficient market.</p>
+                 <div class="button-wrapper d-flex justify-content-end">
+                   <a href="#" class="primary-btn" data-bs-toggle="modal" data-bs-target="#nft-details-modal">View Detailsl</a>
+                   <i class="fas fa-arrow-right-long"></i>
                  </div>
                </div>
           </div>
